# pydantic-cache

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  PUBLISHING.md  README.md  example.py  pyproject.toml
.github/workflows/: publish-test.yml  publish.yml  test.yml
pydantic_cache/: __init__.py  coder.py  decorator.py  key_builder.py  sentinel.py  types.py
pydantic_cache/backends/: inmemory.py  redis.py
tests/: conftest.py  test_backends.py  test_coder.py  test_coder_consistency.py  test_custom_coder.py  test_decorator.py  test_instance_coders.py  test_integration.py  test_key_builder.py  test_nullable.py  test_orjson_coder.py
