[project]
name = "pydantic-cache"
version = "0.1.0"
description = "Async cache library for Pydantic models without FastAPI dependencies"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "pydantic>=2.11.7",
    "redis>=5.0.0",
    "pendulum>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.12.8",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
